<resources>

    <string name="app_name">Wydatki</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_entities">EntitiesActivity</string>
    <string name="title_activity_edit_item">EditItemActivity</string>
    <string name="title_activity_transaction">TransactionActivity</string>
    <string name="income">Przychody</string>
    <string name="expenses">Wydatki</string>
    <string name="title_activity_transaction_filter">Filtry</string>
    <string name="title_activity_transaction_list">Transakcje</string>
    <string name="action_refresh">Odśwież</string>
    
    <string name="list_no_content">Brak elementów</string>
    <string name="list_get_more_data">Następne</string>
    <string name="text_name">Nazwa</string>
    <string name="text_balance">Saldo</string>
    <string name="text_visible_for_all">Widoczne dla wszystkich</string>
    <string name="text_sum_in_global_balance">Sumuj na liście kont</string>
    <string name="text_account_image">Logo konta</string>
    <string name="text_parameter_type">Typ danych</string>
    <string name="text_default_value">Domyślna wartość</string>
    <string name="text_list_elements">Elementy listy</string>
    <string name="text_elements_list_helper">wartości oddziel znakiem ;</string>
    <string name="text_is_active">Dostępny</string>
    <string name="switch_yes">TAK</string>
    <string name="switch_no">NIE</string>
    <string name="text_category_default_state">Wartość domyślna</string>
    <string name="text_category_parent">Kategoria nadrzędna</string>
    <string name="text_category_add_parameter">Dodaj parametr</string>
    <string name="text_save">Zapisz</string>
    <string name="text_cancel">Anuluj</string>
    
    <string name="action_new_item">Dodaj nowy</string>
    <string name="project">Projekt</string>
    <string name="standart_parameters">Parametry</string>
    <string name="date_and_time">Data i czas</string>
    <string name="account_from">Z konta</string>
    <string name="account_to">Na konto</string>
    <string name="category">Kategoria</string>
    <string name="balance">Kwota</string>
    <string name="note">Notatka</string>
    <string name="additional_parameters">Parametry dodatkowe</string>
    <string name="no_selected_value">Nie wybrano</string>
    <string name="dialog_ok">OK</string>
    <string name="cancel">Anuluj</string>
    
    

</resources>
