<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp" >

                <TextView
                    android:id="@+id/textView1"
                    style="@style/Style_TextWithShadow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/etbx_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp" >

                <Switch
                    android:id="@+id/switch_active"
                    style="@style/Style_TextWithShadow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/text_is_active"
                    android:textOff="@string/switch_no"
                    android:textOn="@string/switch_yes" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp" >

                <TextView
                    android:id="@+id/textView3"
                    style="@style/Style_TextWithShadow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_parameter_type"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/spinner_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_parameter_datasource_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp" >

                <TextView
                    android:id="@+id/textView4"
                    style="@style/Style_TextWithShadow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_list_elements"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/Style_TextWithShadow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_elements_list_helper"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/etbx_values"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_parameter_datasource_default_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp" >

                <TextView
                    android:id="@+id/TextView01"
                    style="@style/Style_TextWithShadow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_default_value"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/spinner_default_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_parameter_datasource_detault_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp" >

                <TextView
                    android:id="@+id/textView2"
                    style="@style/Style_TextWithShadow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_default_value"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/etbx_default_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_parameter_datasource_default_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp" >

                <Switch
                    android:id="@+id/switch_default_value"
                    style="@style/Style_TextWithShadow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_default_value"
                    android:textOff="@string/switch_no"
                    android:textOn="@string/switch_yes" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
